--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "node",
             "request": "launch",
-            "name": "Test",
+            "name": "Launch Program",
             "program": "${workspaceFolder}/test/test.js"
         }
     ]
